--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>My Spotfiy</title>
 </head>
 <body>
@@ -34,29 +34,29 @@
                 <img src="img/home.svg" alt="home" /><a href="#"><span>Home</span></a>
               </li>
               <li>
-                <img src="img/search.svg" alt="search" /><a href="#"><span>Search</span></a>
+                <img src="img/search.svg" alt="search" /><a href="#"><span>Cerca</span></a>
               </li>
               <li>
-                <img src="img/libreria.svg" alt="collection" /><a href="#"><span>Your Library</span></a>
+                <img src="img/libreria.svg" alt="collection" /><a href="#"><span>La tua libreria</span></a>
               </li>
             </ul>
           </div>
           <div class="new-playlist">
             <h4>playlist</h4>
-            <a href="#"><i class="fa-solid fa-square-plus"></i><span>New Playlist</span></a>
+            <a href="#"><i class="fa-solid fa-square-plus"></i><span>Crea Playlist</span></a>
           </div>
           <div class="playlist">
             <ul>
-              <li><a href="#">Playlist Name</a></li>
-              <li><a href="#">Playlist Name</a></li>
-              <li><a href="#">Playlist Name</a></li>
-              <li><a href="#">Playlist Name</a></li>
-              <li><a href="#">Playlist Name</a></li>
-              <li><a href="#">Playlist Name</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
+              <li><a href="#">Nome Playlist</a></li>
             </ul>
           </div>
           <div class="account">
-            <a href="#"><img src="img/download.svg" alt="download"><span>Download App</span></a>
+            <a href="#"><img src="img/download.svg" alt="download"><span>Installa App</span></a>
             <hr>
             <img class="profile" src="img/profile.svg" alt="profile picture"><h4>Patrick Bateman</h4>
           </div>
@@ -68,12 +68,12 @@
           </div>
           <div class="navbar">
               <ul>
-                <li><a href="#">highlights</a></li>
-                <li><a href="#">podcast</a></li>
-                <li><a href="#">charts</a></li>
-                <li><a href="#">mood & genres</a></li>
-                <li><a href="#">new releases</a></li>
-                <li><a href="#">discover</a></li>
+                <li><a href="#">IN EVIDENZA</a></li>
+                <li><a href="#">PODCAST</a></li>
+                <li><a href="#">CLASSIFICHE</a></li>
+                <li><a href="#">GENERI E MOOD</a></li>
+                <li><a href="#">NUOVE USCITE</a></li>
+                <li><a href="#">SCOPRI</a></li>
               </ul>
           </div>
           <div class="recently-played">
@@ -154,8 +154,8 @@
             </div>
           </div>
           <div class="for-you">
-            <h2>Created for Patrick Bateman</h2>
-            <h5>The more you listen, the more accurate the suggestions will be.</h5>
+            <h2>Creato per John doe</h2>
+            <h5>Piu ascolti, piu accurati saranno i suggerimenti</h5>
             <div class="row">
               <div class="col">
                 <div class="album">
@@ -182,8 +182,8 @@
             </div>
           </div>
           <div class="popular">
-            <h2>Top Artists</h2>
-            <h5>The more you listen, the more accurate the suggestions will be.</h5>
+            <h2>Artisti piu popolari</h2>
+            <h5></h5>
             <div class="row">
               <div class="col">
                 <div class="album">
@@ -219,7 +219,7 @@
           </div>
           <div class="album-info">
             <h5>Sinister</h5>
-            <a href="#"><h6>Track Name</h6></a>
+            <a href="#"><h6>Brano nome</h6></a>
           </div>
           <div class="player-icons">
             <a href="#"><i class="fa-regular fa-heart"></i></a>
@@ -235,11 +235,11 @@
             <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
           </div>
           <div class="now-playing">
-            <div class="time"><small>0:50</small></div>
+            <div class="time"><small>0:25</small></div>
             <div class="play-bar">
               <div class="play-bar-in"></div>
             </div>
-            <div class="time"><small>04:50</small></div>
+            <div class="time"><small>04:35</small></div>
           </div>
         </div>
         <div class="right">
