--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="account">
             <a href="#"><img src="img/download.svg" alt="download"><span>Installa App</span></a>
             <hr>
-            <img class="profile" src="img/profile.svg" alt="profile picture"><h4>Patrick Bateman</h4>
+            <img class="profile" src="img/profile.svg" alt="profile picture"><h4>John doe</h4>
           </div>
         </div>
         <!-- MAIN CONTENT -->
